[maven-release-plugin] prepare release ego-lang-1.0